# merlin

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/include/app/: engine.hpp
src/app/src/: engine.cpp  main.cpp
src/common/: CMakeLists.txt
src/common/include/common/: frame.hpp  object.hpp  scene.hpp
src/common/src/: frame.cpp  object.cpp
src/file/: CMakeLists.txt
src/file/include/file/: texture_load.hpp
src/file/src/: texture_load.cpp
src/graphics/: CMakeLists.txt
src/graphics/include/graphics/: camera_object.hpp  ebo.hpp  graphical_object.hpp  light.hpp  light_object.hpp  material.hpp  mesh.hpp  ogl_bo.hpp  texture.hpp  vao.hpp  vbo.hpp
src/graphics/src/: camera_object.cpp  graphical_object.cpp  light.cpp  light_object.cpp  material.cpp  mesh.cpp  ogl_bo.cpp  texture.cpp  vao.cpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: engine_gui.hpp  fps.hpp  gui.hpp
src/gui/src/: engine_gui.cpp  fps.cpp  gui.cpp  input.cpp  render.cpp
src/osi/: CMakeLists.txt
src/osi/include/osi/: application.hpp  config.hpp  gui.hpp  imgui.hpp  keyboard.hpp  mouse.hpp  opengl.hpp  run.hpp  sdl.hpp  timer.hpp  window.hpp
src/osi/src/: application.cpp  imgui.cpp  run.cpp  sdl.cpp
src/physics/: CMakeLists.txt
src/physics/include/physics/: physical_object.hpp
src/physics/src/: physical_object.cpp
src/util/: CMakeLists.txt
src/util/include/util/: assumption.hpp  fail_message.hpp  math.hpp
src/util/src/: empty.cpp  fail_message.cpp
